# Microplastic_HCS_Pipeline

./: .gitignore  .zenodo.json  CITATION.cff  CLEANING_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  _dump.py  _dump2.py  _dump3.py  _patch_v2.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: README.md
docs/: EI_Manuscript_FINAL.docx  figure_captions.md  reviewer_concern_resolution.md
docs/appendices/: README.md  feature_definitions_ready_for_author.md  reply_to_reviewers_journal_formatted.md  wetlab_metadata_template.md
notebooks/: MS2_Manuscript.ipynb
pipeline/: classify.py  data_loader.py  detect.py  features.py  preprocess.py
results/: README.md  features.csv
results/appendices/: feature_definitions_ready_for_author.md  wetlab_metadata_template.md
results/figures/: README.md
results/tables/: README.md  (+17 more)
scripts/: audit_manuscript_numbers.py  audit_nb.py  build_all_results.py  build_ei_manuscript.py  clean_repo.ps1  cv_evaluation.py  finalize_results.py  generate_figures.py  inspect_results.py  make_figure_01_pipeline_v2.py  make_figure_02_overlays_v2.py  make_figure_10_degenerate_schematic.py  patch_proofreading_v3.py  patch_proofreading_v4.py  patch_proofreading_v5.py  patch_v2_calibration.py  rf_regularization_cv.py  run_harder_pipeline.py
src/: __init__.py  features.py  full_dataset_advanced_pipeline.py
tests/: test_build_pipeline.py  test_features.py
(+7 files in other folders)
