[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microplastic-hcs-pipeline"
version = "1.0.0"
description = "Microplastic HCS pipeline for MS2 pilot feasibility analysis"
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
